--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -20,12 +20,12 @@
     <!-- Creator Mode Related Settings -->
     <string name="cm_display_header">Color Gamut and Contrast</string>
     <string name="cm_switch_title">Creator Mode</string>
-    <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification.</string>
+    <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification</string>
 
     <!-- Charging Preferences Settings -->
     <string name="advanced_charger_title">@string/charger_setting_header</string>
     <string name="advanced_charger_setting_summary">Configure a custom charging limit and disable charging altogether</string>
-    <string name="charger_setting_main_enable_title">Use Battery Care</string>
+    <string name="charger_setting_main_enable_title">Customize Charging Settings</string>
     <string name="device_charging_enable_title">Enable Charging</string>
     <string name="device_charging_enable_summary">Turning this setting off will stop the device from charging</string>
     <string name="device_charging_control_title">Charging Limit</string>
