parts: switcher: move to main xperiaparts
- time to rewrite

Signed-off-by: lolipuru <banstellazz@gmail.com>

--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -50,4 +50,6 @@
     <!-- HS Charging QS Tile -->
     <string name="charger_qs_tile_title">Pause Charging</string>
 
+    <!-- Refresh Rate Settings -->
+    <string name="refresh_rate_tile_title">Refresh Rate</string>
 </resources>
