parts: update dolby package
* We're now using Sony's DaxUI interface instead of Moto's
Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -13,7 +13,7 @@
 
     <!-- Audio Related Settings -->
     <string name="dolby_category">Audio</string>
-    <string name="dolby_title">Dolby Atmos</string>
+    <string name="dolby_title">Dolby Sound</string>
     <string name="dolby_summary">Adjust audio related settings</string>
 
     <!-- Spatial Audio Related Settings -->
