parts: launch correct external monitor activity
* The reason External Monitor didn't work for us is because Sony designed the app to expose it's activities ONLY after the switch inside the switch inside the "settings.SettingsAppLauncherActivity" is turned on hence by doing this we will be able to successfully use the External Monitor app
* Also added . at the end of sentences for consistency across the menus
* Cleaned up some errors

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <!-- External Monitor -->
     <string name="extmonitor_setting_header">External Monitor</string>
-    <string name="extmonitor_summary">Modify external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>
+    <string name="extmonitor_summary">Enable External Monitor to customize external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>
 
     <!-- Dolby Sound -->
     <string name="audio_title">Audio</string>
@@ -30,7 +30,7 @@
     <!-- Creator Mode -->
     <string name="cm_display_header">Color Gamut and Contrast</string>
     <string name="cm_switch_title">Creator Mode</string>
-    <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification</string>
+    <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification.</string>
 
     <!-- Battery Care -->
     <string name="advanced_charger_title">@string/charger_setting_header</string>
