--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -51,6 +51,11 @@
     <string name="usba_setting_header">External Audio Output</string>
     <string name="usba_setting_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>
 
+    <!-- DSM (DualShock/Sense Manager) -->
+    <string name="gc_title">Game Controller</string>
+    <string name="gc_dsm_setting_header">Wireless Controller for PS5 &amp; PS4</string>
+    <string name="gc_dsm_setting_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>
+
     <!-- Creator Mode Previous Image Button -->
     <string name="previous_page_content_description">Previous</string>
 
