--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -9,14 +9,10 @@
     <string name="display_setting_header">Image Quality Settings</string>
     <string name="display_setting_summary">Choose between brilliant colors or a faithful reproduction of the creator\'s intended vision to create an unforgettable visual experience</string>
 
-    <!-- Dolby Sound -->
-    <string name="audio_title">Audio</string>
-    <string name="dolby_title">Dolby Sound</string>
-    <string name="dolby_summary">Adjust Dolby Sound settings to experience immersive, multidimensional sound that envelops you, bringing movies, music, and games to life</string>
-
-    <!-- 360 Reality Audio -->
-    <string name="threesixtyra_setting_header">360 Reality Audio</string>
-    <string name="threesixtyra_summary">Personalize spatial sound settings and transform ordinary stereo audio sources into captivating auditory experiences</string>
+    <!-- Sound Settings -->
+    <string name="sound_title">Sound</string>
+    <string name="audio_setting_header">Audio Settings</string>
+    <string name="audio_setting_summary">Elevate your auditory experience with the Dolby Sound EQ and the 360 Reality Audio app for remarkable and immersive audio playback</string>
 
     <!-- Charging Settings -->
     <string name="charging_title">Charging</string>
@@ -28,6 +24,17 @@
     <string name="cm_switch_title">Creator Mode</string>
     <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification.</string>
 
+    <!-- Audio Settings -->
+    <string name="audio_menu_title">@string/audio_setting_header</string>
+    <string name="audio_menu_header">Sound Quality</string>
+    <string name="dolby_setting_header">Dolby Sound</string>
+    <string name="dolby_setting_summary">Adjust Dolby Sound settings to experience immersive, multidimensional sound that envelops you, bringing movies, music, and games to life</string>
+    <string name="threesixtyra_setting_header">360 Reality Audio</string>
+    <string name="threesixtyra_setting_summary">Personalize spatial sound settings and transform ordinary stereo audio sources into captivating auditory experiences</string>
+    <string name="effectpriority_setting_header">Effect Priority</string>
+    <string name="effectpriority_setting_summary">The 360 Upmix app will always take priority over the other effects you\'ve turned on (either Dolby Sound with 360 Upmix or just 360 Upmix by itself) for the media sound of apps.</string>
+    <string name="audio_setting_explained">While playing Dolby Sound content or 360 Reality Audio content, the content\'s information will take precedence over the settings on this screen. High resolution content can also be play properly when both Dolby Sound and 360 Upmix are turned off.\n\n\n\nAbout Spatial Audio\nTo enable the 360 Reality Audio feature, turn on Spatial Sound.\nDolby Sound does support Spatial Audio.</string>
+
     <!-- Battery Care -->
     <string name="advanced_charger_title">@string/charger_setting_header</string>
     <string name="advanced_charger_setting_summary">Configure a custom charging limit or disable charging altogether</string>
@@ -35,11 +42,7 @@
     <string name="device_charging_enable_title">Enable Charging</string>
     <string name="device_charging_enable_summary">Disabling this setting will stop the device from charging</string>
     <string name="device_charging_control_title">Charging Limit</string>
-    <string name="charger_setting_explained">If Battery Care is enabled, the device will start charging only when the following requirements have been met:\n
-1. You have enabled charging by toggling \"Enable Charging\".
-\n
-\n
-2. Your device\'s battery level is lower than the charging limit you\'ve set.</string>
+    <string name="charger_setting_explained">If Battery Care is enabled, the device will start charging only when the following requirements have been met:\n 1. You have enabled charging by toggling \"Enable Charging\".\n 2. Your device\'s battery level is lower than the charging limit you\'ve set.</string>
 
     <!-- USB Section | External Monitor -->
     <string name="usb_title">USB</string>
