--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -38,12 +38,12 @@
 
     <!-- Battery Care -->
     <string name="advanced_charger_title">@string/charger_setting_header</string>
-    <string name="advanced_charger_setting_summary">Configure a custom charging limit or disable charging altogether</string>
+    <string name="advanced_charger_setting_summary"></string>
     <string name="charger_setting_main_enable_title">Use Battery Care</string>
     <string name="device_charging_enable_title">Enable Charging</string>
     <string name="device_charging_enable_summary">Disabling this setting will stop the device from charging</string>
     <string name="device_charging_control_title">Charging Limit</string>
-    <string name="charger_setting_explained">If Battery Care is enabled, the device will start charging only when the following requirements have been met:\n 1. You have enabled charging by toggling \"Enable Charging\".\n 2. Your device\'s battery level is lower than the charging limit you\'ve set.</string>
+    <string name="charger_setting_explained">If Battery Care is enabled, the device will start charging only when the following requirements have been met:\n 1. You have enabled charging by toggling \"Enable Charging\".\n 2. Your device\'s battery level is lower than the charging limit you\'ve set.\n\n\nCharging stops when a specified percentage is reached to increase the lifespan of the battery.\nSetting that limit to 80% yields even better results.</string>
 
     <!-- USB Section | External Monitor -->
     <string name="usb_title">USB</string>
@@ -74,6 +74,9 @@
 
     <!-- Creator Mode Preview Images -->
     <string name="colors_viewpager_content_description">Color Preview</string>
+
+    <!-- Battery Care Image Size -->
+    <dimen name="battery_care_preview_height">320dp</dimen>
 
     <!-- H.S (Heat Suppression) Power Control QS Tile -->
     <string name="charger_qs_tile_title">Pause Charging</string>
