parts: change controller string
* In the future we can add here gaming related options so it's better if we generalize it to shift from the term "Game Controller" to a more inclusive "Gaming" for the category title.

Signed-off-by: saku-bruh <notwolfyy@gmail.com>

--- a/XperiaParts/res/values/strings.xml
+++ b/XperiaParts/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="usba_setting_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>
 
     <!-- DSM (DualShock/Sense Manager) -->
-    <string name="gc_title">Game Controller</string>
+    <string name="gaming_title">Gaming</string>
     <string name="gc_dsm_setting_header">Wireless Controller for PS5 &amp; PS4</string>
     <string name="gc_dsm_setting_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>
 
